<resources>
    <string name="app_name">设备测试</string>
    <string name="hello_world">Hello world!</string>
    <string name="xueya">血压</string>
    <string name="tizhi">体脂</string>
    <string name="matong">马桶</string>

    <string name="ble_not_supported">您的设备不支持BLE</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No Connection</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">Select BLE Device</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="connection_successful">The connection is successful, you can now communicate properly!</string>
    <string name="no_such_user">No such user</string>
    <string name="user_exists">User exists</string>
    <string name="deleted_successfully">Deleted successfully</string>
    <string name="delete_failed">Delete failed</string>
    <string name="years_old">years old</string>
    <string name="new_user_successfully">New user successfully</string>
    <string name="users_is_full">The number of users is full, not new!</string>
    <string name="user_is_exists">This user number already exists</string>
    <string name="updated_successfully">Updated successfully</string>
    <string name="user_not_exist">User number does not exist</string>
    <string name="age_height">Age than 9 and less than 81. Height greater than 99 and less than 221.</string>
    <string name="select_success">Select success</string>
    <string name="choose_failure">Choose failure</string>
    <string name="loading">Loading...</string>
    <string name="no_history_data">No historical data</string>
    <string name="p9_test">P9 Test:</string>
    <string name="send">Send</string>
    <string name="scale">Scale</string>
    <string name="readnumber">RNumber</string>
    <string name="writenumber">WNumber</string>

    <string name="user_id">UserId：</string>
    <string name="height">Height：</string>
    <string name="age">Age：</string>
    <string name="sex">Sex：</string>
    <string name="delete_user">Delete User</string>
    <string name="update_user">Update User Info</string>
    <string name="delete_scale">Delete Scale</string>
    <string name="is_exist">Is Exist</string>
    <string name="get_sim_user">Get Sim User</string>
    <string name="clear">Clear</string>
    <string name="scale_switch">Scale Switch</string>
    <string name="create_user">Create User</string>
    <string name="read_user_history">Read User History</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>

    <string name="measuring_time">Measuring time:</string>
    <string name="weight">Weight:</string>
    <string name="fat">Fat:</string>
    <string name="moisture">Moisture:</string>
    <string name="muscle">Muscle:</string>
    <string name="bone">Bone:</string>
    <string name="calories">Calories:</string>
    <string name="subcutaneous_fat">Subcutaneous fat:</string>
    <string name="visceral_fat">Visceral fat:</string>
    <string name="body_age">Body Age:</string>
    <string name="dismiss">Dismiss</string>
    <color name="red">#FF0000</color>

    <!-- Menu items -->
    <string name="menu_connect">连接</string>
    <string name="menu_disconnect">断开</string>
    <string name="menu_scan">搜索</string>
    <string name="menu_stop">停止</string>



    <string name="title_oad">Firmware update (OAD)</string>
    <string name="start_prog">Start programming</string>
    <string name="cancel">Cancel</string>
    <string name="prog_ogoing">NB! Not permitted to close this view during OAD transfer</string>
    <string name="load_image_a">Image A</string>
    <string name="load_image_b">Image B</string>
    <string name="load_image_c">Custom</string>
    <string name="no_image">Not an OAD image</string>
    <string name="no_image_sel">No image selected</string>
    <string name="new_image">New image:</string>
    <string name="cur_image">Current image:</string>
    <string name="idle">idle</string>
    <string name="btn_txt_confirm">Confirm</string>
</resources>
