<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"/>
        <RadioGroup 
            android:id="@+id/rg_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/rb_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/man"/>
            <RadioButton android:id="@+id/rb_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/woman"/>
        </RadioGroup>
    </LinearLayout>

    
    
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"/>
       <EditText android:id="@+id/et_age"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="30"
           android:inputType="number"/>
    </LinearLayout>
    
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"/>
       <EditText android:id="@+id/et_height"
           android:layout_width="0dip"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:text="170"
           android:inputType="number"/>
       <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="cm"/>
    </LinearLayout>
    
     <Button android:id="@+id/btn_send"
         android:layout_width="match_parent"
         android:layout_margin="10dip"
         android:layout_height="wrap_content"
         android:text="@string/send"/>
</LinearLayout>
