<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@android:id/tabhost"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@android:id/tabcontent"
                android:layout_marginBottom="10dp"/>

        <TabWidget
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@android:id/tabs"
                android:visibility="gone"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_alignParentBottom="true"
                android:gravity="bottom"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/tv1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/xueya"
                    android:gravity="center_horizontal"
                    android:drawableTop="@android:drawable/ic_menu_crop"
                    android:textSize="18sp"/>

            <TextView
                    android:id="@+id/tv2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/tizhi"
                    android:gravity="center_horizontal"
                    android:drawableTop="@android:drawable/ic_menu_my_calendar"
                    android:textSize="18sp"/>

            <TextView
                    android:id="@+id/tv3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/matong"
                    android:gravity="center_horizontal"
                    android:drawableTop="@android:drawable/ic_menu_delete"
                    android:textSize="18sp"/>

        </LinearLayout>
    </RelativeLayout>
</TabHost>